=== 2.1.0 / ??

* N Major Enhancements:
  * RDoc now knows about meta-programmed methods, see RDoc::Parser::Ruby
  * Reorganized parsers under RDoc::Parser base class
* N Minor Enhancements:
  * Allow links to files
  * Default options now taken from RDOCOPT environment variable
  * Methods can be added to classes/modules at toplevel now (def X.foo)
  * Allow HTML templates distributed as gems to be loaded with the -T option,
    just like the standard templates in rdoc/generator/html (so an HTML
    template lib/new_template.rb in a gem can be used with rdoc -T new_template)
* N Bug Fixes:
  * `ri Foo.bar` now looks for class methods also
  * Sections work in the default template again
  * Doesn't warn about :foo:: list item being an unrecognized directive
  * RDoc no longer converts characters inside tt tags
  * Fixed "unitialized constant RDoc::Markup::ToHtml::HTML"
  * Fixed generation of relative links
  * Fixed various diagram generation issues
  * Fixed templates broken by switch to erb
  * Fixed issue with <!-- --> style comments
  * Lowercase words are no longer rdoc'd as methods without leading #, as
    described in the documentation

=== 2.0.0 / 2008-04-10

* 3 Major Enhancements:
  * Renamespaced everything RDoc under the RDoc module.
  * New `ri` implementation.
    * Reads from a cache in ~/.ri/ for enhanced speed.
    * RubyGems aware, only searches latest gem versions.
  * Now up to over 100 tests and 200 assertions.
* 4 Minor Enhancements:
  * Switched to an ERb-based TemplatePage, see RDoc::TemplatePage.
  * Class/module ri now displays attribute and constant comments.
  * Cross-references can be disabled with a leading \.
  * Relaxed parsing for some RDoc inline markup.